--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;}
 .modal .card{width:400px;position:relative;}
 .modal .close{position:absolute;top:10px;right:15px;cursor:pointer;font-size:20px;}
+#liveAdminControls{margin-bottom:15px;display:none;}
 @media(max-width:768px){.sidebar{position:relative;width:100%;}.main{margin-left:0;}}
 </style>
 </head>
@@ -86,6 +87,11 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 
 <div id="live" class="card" style="display:none;">
 <h2>Live Calls</h2>
+<div id="liveAdminControls">
+  <input type="text" id="liveDesc" placeholder="Call Description">
+  <input type="text" id="liveLoc" placeholder="Location">
+  <button onclick="addLiveCall()">Add Live Call</button>
+</div>
 <ul id="liveCallList"></ul>
 </div>
 
@@ -155,108 +161,11 @@ function login(username,password){
     document.getElementById('sidebar').style.display='block';
     document.getElementById('dashUser').innerText=currentUser.username;
     document.getElementById('userRole').innerText=currentUser.rank;
-    showPanel('dashboard');
-    updateScenarioList();
-    updateLiveCalls();
-    updatePending();
-    updateResults();
-  } else alert('Incorrect credentials or account not approved yet.');
-}
+    document.getElementById('userStatus').innerText = (currentUser.rank==='Admin' || currentUser.rank==='Dispatcher High Command') ? 'Approved' : 'Pending Approval';
 
-// LOGOUT
-function logout(){currentUser=null;document.getElementById('sidebar').style.display='none';document.getElementById('loginDiv').style.display='block';}
+    // Sidebar buttons visibility
+    document.querySelector('.sidebar button[onclick*="pending"]').style.display = (currentUser.rank==='Admin') ? 'block' : 'none';
+    document.querySelector('.sidebar button[onclick*="results"]').style.display = 'block';
 
-// REQUEST ACCOUNT
-function requestAccount(){
-  const username=document.getElementById('reqUser').value.trim();
-  const password=document.getElementById('reqPass').value.trim();
-  const discord=document.getElementById('reqDiscord').value.trim();
-  if(!username||!password||!discord){ alert('Fill all fields'); return; }
-  if(users.find(u=>u.username===username)||pendingAccounts.find(p=>p.username===username)){
-    alert('Username exists or pending'); return;
-  }
-  pendingAccounts.push({username,password,discord,status:'Pending'});
-  localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts));
-  document.getElementById('reqStatus').innerText='Waiting for High Command approval...';
-  document.getElementById('reqUser').value=''; 
-  document.getElementById('reqPass').value=''; 
-  document.getElementById('reqDiscord').value='';
-}
-
-// SCENARIOS
-function addScenario(){const text=document.getElementById('scenarioText').value.trim();if(!text){ alert('Enter scenario'); return;} scenarios.push(text); localStorage.setItem('scenarios',JSON.stringify(scenarios)); updateScenarioList();}
-function deleteScenario(){ if(scenarios.length>0){ scenarios.pop(); localStorage.setItem('scenarios',JSON.stringify(scenarios)); updateScenarioList(); } }
-function updateScenarioList(){ const ul=document.getElementById('scenarioList'); ul.innerHTML=''; scenarios.forEach(s=>{ const li=document.createElement('li'); li.textContent=s; ul.appendChild(li);}); }
-
-// LIVE CALLS
-function updateLiveCalls(){
-  const ul=document.getElementById('liveCallList'); ul.innerHTML='';
-  liveCalls.forEach((c,i)=>{
-    if(c.assigned) return;
-    const li=document.createElement('li');
-    li.textContent=`${c.desc || 'Call'} (${c.loc || 'Location'}) `;
-    ['Fire','EMS','Police'].forEach(service=>{
-      const btn=document.createElement('button'); btn.textContent=service;
-      btn.onclick=()=>dispatchCall(i,service,li);
-      li.appendChild(btn);
-    });
-    ul.appendChild(li);
-  });
-}
-function dispatchCall(index,service,li){
-  liveCalls[index].assigned=true;
-  liveCalls[index].service=service;
-  liveCalls[index].user=currentUser.username;
-  liveCalls[index].score=50;
-  liveCalls[index].eligible=true;
-  results.push({...liveCalls[index],passfail:'Waiting',feedback:'',review:''});
-  localStorage.setItem('liveCalls',JSON.stringify(liveCalls));
-  localStorage.setItem('results',JSON.stringify(results));
-  li.remove();
-}
-
-// RESULTS
-function updateResults(){
-  const tbody=document.getElementById('resultsTable').querySelector('tbody'); tbody.innerHTML='';
-  results.forEach(r=>{
-    const tr=document.createElement('tr');
-    let statusClass='status-waiting';
-    if(r.passfail==='Passed') statusClass='status-passed';
-    else if(r.passfail==='Failed') statusClass='status-failed';
-    tr.innerHTML=`<td>${r.user}</td><td>${r.desc||''}</td><td>${r.score}</td><td>${r.eligible?'Yes':'No'}</td><td>${r.service}</td><td class="${statusClass}">${r.passfail}</td><td>${r.feedback}</td><td>${r.review}</td>`;
-    tbody.appendChild(tr);
-  });
-}
-function exportResults(){
-  let csv='User,Scenario,Score,Eligible,Service,Pass/Fail,Feedback,Review\n';
-  results.forEach(r=>{csv+=`${r.user},${r.desc||''},${r.score},${r.eligible?'Yes':'No'},${r.service},${r.passfail},${r.feedback},${r.review}\n`;});
-  const a=document.createElement('a'); a.href='data:text/csv;charset=utf-8,'+encodeURIComponent(csv); a.download='results.csv'; a.click();
-}
-
-// PENDING ACCOUNTS
-function updatePending(){
-  const ul=document.getElementById('pendingList'); ul.innerHTML='';
-  pendingAccounts.forEach((p,i)=>{
-    const li=document.createElement('li'); li.textContent=`${p.username} (${p.discord}) - ${p.status} `;
-    const approve=document.createElement('button'); approve.textContent='Approve';
-    approve.onclick=()=>{
-      users.push({username:p.username,password:p.password,rank:'Dispatcher Trainee'});
-      localStorage.setItem('users',JSON.stringify(users));
-      pendingAccounts.splice(i,1);
-      localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts));
-      updatePending();
-      alert(`Approved ${p.username}`);
-    };
-    const deny=document.createElement('button'); deny.textContent='Deny';
-    deny.onclick=()=>{
-      pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Denied ${p.username}`);
-    };
-    li.appendChild(approve); li.appendChild(deny); ul.appendChild(li);
-  });
-  document.getElementById('pendingBtn').style.display=(currentUser.rank==='Admin' || currentUser.rank==='Dispatcher High Command')?'block':'none';
-}
-</script>
-
-</body>
-</html>
+    // Live calls admin controls
 
