--- a/index.html
+++ b/index.html
@@ -154,18 +154,161 @@ function showPanel(id){
 // LOGIN
 function login(username,password){
   const user=users.find(u=>u.username===username && u.password===password);
-  if(user){
-    currentUser=user;
-    document.getElementById('loginDiv').style.display='none';
-    document.getElementById('requestModal').style.display='none';
-    document.getElementById('sidebar').style.display='block';
-    document.getElementById('dashUser').innerText=currentUser.username;
-    document.getElementById('userRole').innerText=currentUser.rank;
-    document.getElementById('userStatus').innerText = (currentUser.rank==='Admin' || currentUser.rank==='Dispatcher High Command') ? 'Approved' : 'Pending Approval';
+  if(!user){ alert('Incorrect credentials or account not approved yet.'); return; }
+  currentUser=user;
+  document.getElementById('loginDiv').style.display='none';
+  document.getElementById('requestModal').style.display='none';
+  document.getElementById('sidebar').style.display='block';
+  document.getElementById('dashUser').innerText=currentUser.username;
+  document.getElementById('userRole').innerText=currentUser.rank;
+  document.getElementById('userStatus').innerText = (currentUser.rank==='Admin'||currentUser.rank==='Dispatcher High Command')?'Approved':'Pending Approval';
 
-    // Sidebar buttons visibility
-    document.querySelector('.sidebar button[onclick*="pending"]').style.display = (currentUser.rank==='Admin') ? 'block' : 'none';
-    document.querySelector('.sidebar button[onclick*="results"]').style.display = 'block';
+  // Sidebar buttons
+  document.getElementById('pendingBtn').style.display = (currentUser.rank==='Admin')?'block':'none';
+  document.querySelector('.sidebar button[onclick*="results"]').style.display='block';
 
-    // Live calls admin controls
+  // Update panels
+  showPanel('dashboard');
+  updateScenarioUI();
+  updateLiveUI();
+  updateScenarioList();
+  updateLiveCalls();
+  updateResults();
+  updatePending();
+}
+
+// LOGOUT
+function logout(){
+  currentUser=null;
+  document.getElementById('sidebar').style.display='none';
+  document.getElementById('loginDiv').style.display='block';
+  ['dashboard','live','scenarios','results','pending'].forEach(p=>document.getElementById(p).style.display='none');
+  document.getElementById('requestModal').style.display='none';
+}
+
+// REQUEST ACCOUNT
+function requestAccount(){
+  const username=document.getElementById('reqUser').value.trim();
+  const password=document.getElementById('reqPass').value.trim();
+  const discord=document.getElementById('reqDiscord').value.trim();
+  if(!username||!password||!discord){alert('Fill all fields'); return;}
+  pendingAccounts.push({username,password,discord,status:'Pending'});
+  localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts));
+  alert('Request submitted. Waiting for Admin approval.');
+  closeRequestModal();
+}
+
+// SCENARIO MANAGEMENT
+function addScenario(){
+  if(currentUser.rank!=='Admin'){alert('Only Admin can add scenarios'); return;}
+  const desc=document.getElementById('scenarioText').value.trim();
+  if(!desc){alert('Enter scenario'); return;}
+  scenarios.push(desc);
+  localStorage.setItem('scenarios',JSON.stringify(scenarios));
+  document.getElementById('scenarioText').value='';
+  updateScenarioList();
+}
+
+function deleteScenario(){
+  if(currentUser.rank!=='Admin'){alert('Only Admin can delete scenarios'); return;}
+  scenarios.pop();
+  localStorage.setItem('scenarios',JSON.stringify(scenarios));
+  updateScenarioList();
+}
+
+function updateScenarioList(){
+  const ul=document.getElementById('scenarioList'); ul.innerHTML='';
+  scenarios.forEach((s,i)=>{const li=document.createElement('li'); li.textContent=s; ul.appendChild(li);});
+}
+
+function updateScenarioUI(){
+  if(currentUser.rank!=='Admin'){
+    document.getElementById('scenarioText').style.display='none';
+    document.querySelectorAll('#scenarios button').forEach(b=>b.style.display='none');
+  } else {
+    document.getElementById('scenarioText').style.display='block';
+    document.querySelectorAll('#scenarios button').forEach(b=>b.style.display='block');
+  }
+}
+
+// LIVE CALLS
+function addLiveCall(){
+  if(!(currentUser.rank==='Admin'||currentUser.rank==='Dispatcher High Command')){alert('Not authorized'); return;}
+  const desc=document.getElementById('liveDesc').value.trim();
+  const loc=document.getElementById('liveLoc').value.trim();
+  if(!desc||!loc){alert('Fill all fields'); return;}
+  liveCalls.push({desc,loc,assigned:false});
+  localStorage.setItem('liveCalls',JSON.stringify(liveCalls));
+  document.getElementById('liveDesc').value=''; document.getElementById('liveLoc').value='';
+  updateLiveCalls();
+}
+
+function updateLiveCalls(){
+  const ul=document.getElementById('liveCallList'); ul.innerHTML='';
+  liveCalls.forEach((c,i)=>{
+    const li=document.createElement('li'); 
+    li.textContent=`${c.desc} (${c.loc}) `;
+    if(!c.assigned && (currentUser.rank==='Admin'||currentUser.rank==='Dispatcher High Command'||currentUser.rank==='Dispatcher Trainee')){
+      const fire=document.createElement('button'); fire.textContent='Fire'; fire.onclick=()=>dispatchCall(i,'Fire');
+      const ems=document.createElement('button'); ems.textContent='EMS'; ems.onclick=()=>dispatchCall(i,'EMS');
+      const police=document.createElement('button'); police.textContent='Police'; police.onclick=()=>dispatchCall(i,'Police');
+      li.appendChild(fire); li.appendChild(ems); li.appendChild(police);
+    } else if(c.assigned){
+      li.textContent+=`[Dispatched: ${c.service}]`;
+    }
+    ul.appendChild(li);
+  });
+}
+
+function dispatchCall(index,service){
+  const call=liveCalls[index]; if(!call||call.assigned) return;
+  call.assigned=true; call.service=service;
+  results.push({user:currentUser.username,desc:call.desc,score:Math.floor(Math.random()*100)+1,eligible:true,service:service,passfail:'Waiting',feedback:'',review:''});
+  localStorage.setItem('liveCalls',JSON.stringify(liveCalls));
+  localStorage.setItem('results',JSON.stringify(results));
+  updateLiveCalls(); updateResults();
+}
+
+function updateLiveUI(){
+  document.getElementById('liveAdminControls').style.display = (currentUser.rank==='Admin'||currentUser.rank==='Dispatcher High Command')?'block':'none';
+}
+
+// RESULTS
+function updateResults(){
+  const tbody=document.getElementById('resultsTable').querySelector('tbody'); tbody.innerHTML='';
+  results.forEach(r=>{
+    if(currentUser.rank!=='Admin' && r.user!==currentUser.username) return;
+    const tr=document.createElement('tr');
+    let statusClass='status-waiting';
+    if(r.passfail==='Passed') statusClass='status-passed';
+    else if(r.passfail==='Failed') statusClass='status-failed';
+    tr.innerHTML=`<td>${r.user}</td><td>${r.desc||''}</td><td>${r.score}</td><td>${r.eligible?'Yes':'No'}</td><td>${r.service}</td><td class="${statusClass}">${r.passfail}</td><td>${r.feedback}</td><td>${r.review}</td>`;
+    tbody.appendChild(tr);
+  });
+}
+
+function exportResults(){
+  let csv='User,Scenario,Score,Eligible,Service,Pass/Fail,Feedback,Review\n';
+  results.forEach(r=>{csv+=`${r.user},${r.desc||''},${r.score},${r.eligible?'Yes':'No'},${r.service},${r.passfail},${r.feedback},${r.review}\n`;});
+  const a=document.createElement('a'); a.href='data:text/csv;charset=utf-8,'+encodeURIComponent(csv); a.download='results.csv'; a.click();
+}
+
+// PENDING ACCOUNTS
+function updatePending(){
+  const ul=document.getElementById('pendingList'); ul.innerHTML='';
+  if(currentUser.rank!=='Admin') return;
+  pendingAccounts.forEach((p,i)=>{
+    const li=document.createElement('li'); li.textContent=`${p.username} (${p.discord}) - ${p.status} `;
+    const approve=document.createElement('button'); approve.textContent='Approve';
+    approve.onclick=()=>{users.push({username:p.username,password:p.password,rank:'Dispatcher Trainee'}); localStorage.setItem('users',JSON.stringify(users)); pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Approved ${p.username}`);};
+    const deny=document.createElement('button'); deny.textContent='Deny';
+    deny.onclick=()=>{pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Denied ${p.username}`);};
+    li.appendChild(approve); li.appendChild(deny); ul.appendChild(li);
+  });
+}
+</script>
+
+</body>
+</html>
+
 
