--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ body{margin:0;font-family:'Segoe UI',sans-serif;background:linear-gradient(135de
 img.logo{max-width:150px;margin-bottom:20px;}
 .container{width:100%;display:flex;justify-content:center;align-items:center;flex:1;}
 .card{background:rgba(0,0,0,0.25);padding:30px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,0.4);width:350px;text-align:center;}
-input,button{width:100%;padding:12px;margin:10px 0;border-radius:8px;border:none;font-size:1em;}
+input,select,button{width:100%;padding:12px;margin:10px 0;border-radius:8px;border:none;font-size:1em;}
 input{background:rgba(255,255,255,0.2);color:#fff;}
 input::placeholder{color:rgba(255,255,255,0.7);}
+select{background:rgba(255,255,255,0.2);color:#fff;}
 button{background:linear-gradient(90deg,#2575fc,#6a11cb);color:#fff;font-weight:bold;cursor:pointer;transition:0.3s;}
 button:hover{opacity:0.9;}
 p.link{cursor:pointer;text-decoration:underline;margin-top:10px;color:#fff;}
@@ -20,9 +21,9 @@ h2{margin-bottom:20px;}
 .sidebar h3{margin-bottom:15px;}
 .sidebar button{width:100%;margin:5px 0;background:linear-gradient(to right,#2575fc,#6a11cb);padding:10px;border:none;border-radius:6px;cursor:pointer;transition:0.3s;}
 .sidebar button:hover{opacity:0.9;}
-.main{margin-left:240px;padding:20px;flex:1;}
-table{width:100%;border-collapse:collapse;margin-top:15px;}
-th,td{padding:10px;border:1px solid #fff;text-align:center;}
+.main{margin-left:240px;padding:20px;flex:1;overflow-x:auto;}
+table{width:100%;border-collapse:collapse;margin-top:15px;table-layout:fixed;word-wrap:break-word;}
+th,td{padding:8px;border:1px solid #fff;text-align:center;font-size:0.8em;}
 th{background:rgba(255,255,255,0.2);}
 ul{list-style:none;padding-left:0;}
 #liveCallList li{margin-bottom:6px;}
@@ -35,6 +36,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 .modal .card{width:400px;position:relative;}
 .modal .close{position:absolute;top:10px;right:15px;cursor:pointer;font-size:20px;}
 #liveAdminControls{margin-bottom:15px;display:none;}
+#adminCreateUser{margin-bottom:15px;}
 @media(max-width:768px){.sidebar{position:relative;width:100%;}.main{margin-left:0;}}
 </style>
 </head>
@@ -63,7 +65,6 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
     <input type="text" id="reqDiscord" placeholder="Your Discord Name">
     <button onclick="requestAccount()">Submit Request</button>
     <p class="link" onclick="closeRequestModal()">Back to Login</p>
-    <div id="reqStatus"></div>
   </div>
 </div>
 
@@ -75,13 +76,14 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <button onclick="showPanel('scenarios')">Scenarios</button>
 <button onclick="showPanel('results')">Results</button>
 <button onclick="showPanel('pending')" id="pendingBtn">Pending Accounts</button>
+<button onclick="showPanel('adminCreateUser')" id="adminCreateBtn">Create Account</button>
 <button onclick="logout()">Logout</button>
 </div>
 
 <!-- MAIN CONTENT -->
 <div class="main">
 <div id="dashboard" class="card" style="display:none;">
-<h2>Welcome, <span id="dashUser"></span></h2>
+<h2>Welcome Dispatcher <span id="dashUser"></span></h2>
 <p>Status: <span id="userStatus" class="status-pending">Pending Approval</span></p>
 </div>
 
@@ -104,7 +106,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 </div>
 
 <div id="results" class="card" style="display:none;">
-<h2>All Submissions</h2>
+<h2>Results</h2>
 <table id="resultsTable">
 <thead>
 <tr>
@@ -119,6 +121,18 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <div id="pending" class="card" style="display:none;">
 <h2>Pending Accounts</h2>
 <ul id="pendingList"></ul>
+</div>
+
+<div id="adminCreateUser" class="card" style="display:none;">
+<h2>Create User Account</h2>
+<input type="text" id="newUser" placeholder="Username">
+<input type="password" id="newPass" placeholder="Password">
+<select id="newRole">
+<option value="Dispatcher Trainee">Dispatcher Trainee</option>
+<option value="Dispatcher High Command">Dispatcher High Command</option>
+<option value="Admin">Admin</option>
+</select>
+<button onclick="createAdminAccount()">Create Account</button>
 </div>
 </div>
 
@@ -147,7 +161,7 @@ function closeRequestModal(){document.getElementById('requestModal').style.displ
 
 // SHOW PANELS
 function showPanel(id){
-  ['dashboard','live','scenarios','results','pending'].forEach(p=>document.getElementById(p).style.display='none');
+  ['dashboard','live','scenarios','results','pending','adminCreateUser'].forEach(p=>document.getElementById(p).style.display='none');
   document.getElementById(id).style.display='block';
 }
 
@@ -157,7 +171,6 @@ function login(username,password){
   if(!user){ alert('Incorrect credentials or account not approved yet.'); return; }
   currentUser=user;
   document.getElementById('loginDiv').style.display='none';
-  document.getElementById('requestModal').style.display='none';
   document.getElementById('sidebar').style.display='block';
   document.getElementById('dashUser').innerText=currentUser.username;
   document.getElementById('userRole').innerText=currentUser.rank;
@@ -165,7 +178,7 @@ function login(username,password){
 
   // Sidebar buttons
   document.getElementById('pendingBtn').style.display = (currentUser.rank==='Admin')?'block':'none';
-  document.querySelector('.sidebar button[onclick*="results"]').style.display='block';
+  document.getElementById('adminCreateBtn').style.display = (currentUser.rank==='Admin')?'block':'none';
 
   // Update panels
   showPanel('dashboard');
@@ -182,8 +195,7 @@ function logout(){
   currentUser=null;
   document.getElementById('sidebar').style.display='none';
   document.getElementById('loginDiv').style.display='block';
-  ['dashboard','live','scenarios','results','pending'].forEach(p=>document.getElementById(p).style.display='none');
-  document.getElementById('requestModal').style.display='none';
+  ['dashboard','live','scenarios','results','pending','adminCreateUser'].forEach(p=>document.getElementById(p).style.display='none');
 }
 
 // REQUEST ACCOUNT
@@ -194,8 +206,9 @@ function requestAccount(){
   if(!username||!password||!discord){alert('Fill all fields'); return;}
   pendingAccounts.push({username,password,discord,status:'Pending'});
   localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts));
-  alert('Request submitted. Waiting for Admin approval.');
   closeRequestModal();
+  alert('Request submitted. Admin will approve it.');
+  if(currentUser?.rank==='Admin') updatePending();
 }
 
 // SCENARIO MANAGEMENT
@@ -270,45 +283,7 @@ function dispatchCall(index,service){
 }
 
 function updateLiveUI(){
-  document.getElementById('liveAdminControls').style.display = (currentUser.rank==='Admin'||currentUser.rank==='Dispatcher High Command')?'block':'none';
-}
+  document.getElementById('liveAdminControls').style.display = (currentUser.rank==='Admin'||currentUser.rank==='Dispatcher
 
-// RESULTS
-function updateResults(){
-  const tbody=document.getElementById('resultsTable').querySelector('tbody'); tbody.innerHTML='';
-  results.forEach(r=>{
-    if(currentUser.rank!=='Admin' && r.user!==currentUser.username) return;
-    const tr=document.createElement('tr');
-    let statusClass='status-waiting';
-    if(r.passfail==='Passed') statusClass='status-passed';
-    else if(r.passfail==='Failed') statusClass='status-failed';
-    tr.innerHTML=`<td>${r.user}</td><td>${r.desc||''}</td><td>${r.score}</td><td>${r.eligible?'Yes':'No'}</td><td>${r.service}</td><td class="${statusClass}">${r.passfail}</td><td>${r.feedback}</td><td>${r.review}</td>`;
-    tbody.appendChild(tr);
-  });
-}
-
-function exportResults(){
-  let csv='User,Scenario,Score,Eligible,Service,Pass/Fail,Feedback,Review\n';
-  results.forEach(r=>{csv+=`${r.user},${r.desc||''},${r.score},${r.eligible?'Yes':'No'},${r.service},${r.passfail},${r.feedback},${r.review}\n`;});
-  const a=document.createElement('a'); a.href='data:text/csv;charset=utf-8,'+encodeURIComponent(csv); a.download='results.csv'; a.click();
-}
-
-// PENDING ACCOUNTS
-function updatePending(){
-  const ul=document.getElementById('pendingList'); ul.innerHTML='';
-  if(currentUser.rank!=='Admin') return;
-  pendingAccounts.forEach((p,i)=>{
-    const li=document.createElement('li'); li.textContent=`${p.username} (${p.discord}) - ${p.status} `;
-    const approve=document.createElement('button'); approve.textContent='Approve';
-    approve.onclick=()=>{users.push({username:p.username,password:p.password,rank:'Dispatcher Trainee'}); localStorage.setItem('users',JSON.stringify(users)); pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Approved ${p.username}`);};
-    const deny=document.createElement('button'); deny.textContent='Deny';
-    deny.onclick=()=>{pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Denied ${p.username}`);};
-    li.appendChild(approve); li.appendChild(deny); ul.appendChild(li);
-  });
-}
-</script>
-
-</body>
-</html>
 
 
