--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <!-- LOGIN SCREEN -->
 <div class="container">
 <div id="loginDiv" class="card">
-<img class="logo" src="https://sdmntprnorthcentralus.oaiusercontent.com/files/00000000-7c9c-622f-ae4e-fd7da774c7d3/raw?se=2025-08-30T07%3A27%3A41Z&sp=r&sv=2024-08-04&sr=b&scid=61368fc5-d34a-5137-b494-8eeb93952990&skoid=5c72dd08-68ae-4091-b4e1-40ccec0693ae&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-08-29T19%3A34%3A26Z&ske=2025-08-30T19%3A34%3A26Z&sks=b&skv=2024-08-04&sig=fwwNfDAYpyNPBX6Mhp/NgTsHkK0XdpWiY1Bxq/bCJAE%3D" alt="911 Dispatch Logo">
 <h2>Login</h2>
 <input type="text" id="loginUser" placeholder="Username">
 <input type="password" id="loginPass" placeholder="Password">
@@ -57,7 +56,6 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <div id="requestModal" class="modal">
   <div class="card">
     <span class="close" onclick="closeRequestModal()">×</span>
-    <img class="logo" src="https://sdmntprnorthcentralus.oaiusercontent.com/files/00000000-7c9c-622f-ae4e-fd7da774c7d3/raw?se=2025-08-30T07%3A27%3A41Z&sp=r&sv=2024-08-04&sr=b&scid=61368fc5-d34a-5137-b494-8eeb93952990&skoid=5c72dd08-68ae-4091-b4e1-40ccec0693ae&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-08-29T19%3A34%3A26Z&ske=2025-08-30T19%3A34%3A26Z&sks=b&skv=2024-08-04&sig=fwwNfDAYpyNPBX6Mhp/NgTsHkK0XdpWiY1Bxq/bCJAE%3D" alt="911 Dispatch Logo">
     <h2>Request Account</h2>
     <input type="text" id="reqUser" placeholder="Preferred Username">
     <input type="password" id="reqPass" placeholder="Password">
@@ -89,9 +87,9 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <div id="live" class="card" style="display:none;">
 <h2>Live Calls</h2>
 <div id="liveAdminControls">
-  <input type="text" id="liveDesc" placeholder="Call Description">
-  <input type="text" id="liveLoc" placeholder="Location">
-  <button id="addLiveBtn">Add Live Call</button>
+<input type="text" id="liveDesc" placeholder="Call Description">
+<input type="text" id="liveLoc" placeholder="Location">
+<button id="addLiveBtn">Add Live Call</button>
 </div>
 <ul id="liveCallList"></ul>
 </div>
@@ -108,9 +106,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <h2>Results</h2>
 <table id="resultsTable">
 <thead>
-<tr>
-<th>User</th><th>Scenario</th><th>Score</th><th>Eligible</th><th>Service</th><th>Pass/Fail</th><th>Feedback</th><th>Review</th>
-</tr>
+<tr><th>User</th><th>Scenario</th><th>Score</th><th>Eligible</th><th>Service</th><th>Pass/Fail</th><th>Feedback</th><th>Review</th></tr>
 </thead>
 <tbody></tbody>
 </table>
@@ -140,14 +136,69 @@ Powered by Nextwave Roleplay Development Team | Powered by Shadowisfun
 </footer>
 
 <script>
-// FULL FUNCTIONAL JS CODE WILL HANDLE LOGIN, REQUEST, DASHBOARD, SCENARIOS, LIVE CALLS, RESULTS
-// This script initializes users, handles login/logout, request approvals, scenario & live call management
-// Full script is extensive and manages all described functionality
+// DATA STORAGE
+let users = JSON.parse(localStorage.getItem('users')) || [];
+let pendingAccounts = JSON.parse(localStorage.getItem('pendingAccounts')) || [];
+let scenarios = JSON.parse(localStorage.getItem('scenarios')) || [];
+let liveCalls = JSON.parse(localStorage.getItem('liveCalls')) || [];
+let results = JSON.parse(localStorage.getItem('results')) || [];
+let currentUser = null;
+
+// OWNER SETUP
+if(!users.find(u=>u.username==='shadowisfun')){
+  users.push({username:'shadowisfun', password:'aidenfav88!', rank:'Admin'});
+  localStorage.setItem('users', JSON.stringify(users));
+}
+
+// FUNCTIONS
+function showPanel(id){
+  ['dashboard','live','scenarios','results','pending','adminCreateUser'].forEach(p=>document.getElementById(p).style.display='none');
+  document.getElementById(id).style.display='block';
+}
+
+function openRequestModal(){document.getElementById('requestModal').style.display='flex';}
+function closeRequestModal(){document.getElementById('requestModal').style.display='none';}
+
+function login(username,password){
+  const user = users.find(u=>u.username===username && u.password===password);
+  if(!user){ alert('Incorrect credentials or not approved.'); return; }
+  currentUser=user;
+  document.getElementById('loginDiv').style.display='none';
+  document.getElementById('sidebar').style.display='block';
+  document.getElementById('dashUser').innerText = user.username;
+  document.getElementById('userStatus').innerText = 'Approved';
+  document.getElementById('userRole').innerText = user.rank;
+  if(user.rank==='Admin'){document.getElementById('pendingBtn').style.display='block'; document.getElementById('adminCreateBtn').style.display='block'; document.getElementById('liveAdminControls').style.display='block';}
+  else{document.getElementById('pendingBtn').style.display='none'; document.getElementById('adminCreateBtn').style.display='none';}
+  showPanel('dashboard');
+}
+
+function logout(){
+  currentUser=null;
+  document.getElementById('sidebar').style.display='none';
+  document.getElementById('loginDiv').style.display='block';
+}
+
+// EVENT LISTENERS
+document.getElementById('loginBtn').addEventListener('click',()=>{
+  login(document.getElementById('loginUser').value.trim(), document.getElementById('loginPass').value.trim());
+});
+document.getElementById('requestBtn').addEventListener('click', openRequestModal);
+document.getElementById('submitRequestBtn').addEventListener('click',()=>{
+  const u = document.getElementById('reqUser').value.trim();
+  const p = document.getElementById('reqPass').value.trim();
+  const d = document.getElementById('reqDiscord').value.trim();
+  if(!u||!p){alert('Enter username and password'); return;}
+  pendingAccounts.push({username:u,password:p,discord:d,rank:'Dispatcher Trainee',status:'Pending'});
+  localStorage.setItem('pendingAccounts', JSON.stringify(pendingAccounts));
+  alert('Request submitted, waiting for approval');
+  closeRequestModal();
+});
+
+// Additional JS for scenarios, live calls, results, approvals would follow here...
 </script>
 
 </body>
 </html>
 
-
-</body>
 </html>
