--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@ ul{list-style:none;padding-left:0;}
 .status-passed{color:limegreen;font-weight:bold;}
 .status-failed{color:red;font-weight:bold;}
 footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20px;}
-.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;}
-.modal .card{width:400px;position:relative;}
-.modal .close{position:absolute;top:10px;right:15px;cursor:pointer;font-size:20px;}
 #liveAdminControls{margin-bottom:15px;display:none;}
 #adminCreateUser{margin-bottom:15px;}
 @media(max-width:768px){.sidebar{position:relative;width:100%;}.main{margin-left:0;}}
@@ -48,21 +45,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <input type="text" id="loginUser" placeholder="Username">
 <input type="password" id="loginPass" placeholder="Password">
 <button id="loginBtn">Login</button>
-<button id="requestBtn">Request Account</button>
 </div>
-</div>
-
-<!-- REQUEST ACCOUNT MODAL -->
-<div id="requestModal" class="modal">
-  <div class="card">
-    <span class="close" onclick="closeRequestModal()">×</span>
-    <h2>Request Account</h2>
-    <input type="text" id="reqUser" placeholder="Preferred Username">
-    <input type="password" id="reqPass" placeholder="Password">
-    <input type="text" id="reqDiscord" placeholder="Your Discord Name">
-    <button id="submitRequestBtn">Submit Request</button>
-    <p class="link" onclick="closeRequestModal()">Back to Login</p>
-  </div>
 </div>
 
 <!-- SIDEBAR -->
@@ -72,7 +55,6 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <button onclick="showPanel('live')">Live Calls</button>
 <button onclick="showPanel('scenarios')">Scenarios</button>
 <button onclick="showPanel('results')">Results</button>
-<button onclick="showPanel('pending')" id="pendingBtn">Pending Accounts</button>
 <button onclick="showPanel('adminCreateUser')" id="adminCreateBtn">Create Account</button>
 <button onclick="logout()">Logout</button>
 </div>
@@ -81,7 +63,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <div class="main">
 <div id="dashboard" class="card" style="display:none;">
 <h2>Welcome Dispatcher <span id="dashUser"></span></h2>
-<p>Status: <span id="userStatus" class="status-pending">Pending Approval</span></p>
+<p>Status: <span id="userStatus" class="status-passed">Approved</span></p>
 </div>
 
 <div id="live" class="card" style="display:none;">
@@ -113,11 +95,6 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <button id="exportBtn">Export CSV</button>
 </div>
 
-<div id="pending" class="card" style="display:none;">
-<h2>Pending Accounts</h2>
-<ul id="pendingList"></ul>
-</div>
-
 <div id="adminCreateUser" class="card" style="display:none;">
 <h2>Create User Account</h2>
 <input type="text" id="newUser" placeholder="Username">
@@ -136,69 +113,64 @@ Powered by Nextwave Roleplay Development Team | Powered by Shadowisfun
 </footer>
 
 <script>
-// DATA STORAGE
+// STORAGE
 let users = JSON.parse(localStorage.getItem('users')) || [];
-let pendingAccounts = JSON.parse(localStorage.getItem('pendingAccounts')) || [];
 let scenarios = JSON.parse(localStorage.getItem('scenarios')) || [];
 let liveCalls = JSON.parse(localStorage.getItem('liveCalls')) || [];
 let results = JSON.parse(localStorage.getItem('results')) || [];
 let currentUser = null;
 
-// OWNER SETUP
+// OWNER
 if(!users.find(u=>u.username==='shadowisfun')){
   users.push({username:'shadowisfun', password:'aidenfav88!', rank:'Admin'});
   localStorage.setItem('users', JSON.stringify(users));
 }
 
-// FUNCTIONS
-function showPanel(id){
-  ['dashboard','live','scenarios','results','pending','adminCreateUser'].forEach(p=>document.getElementById(p).style.display='none');
-  document.getElementById(id).style.display='block';
-}
-
-function openRequestModal(){document.getElementById('requestModal').style.display='flex';}
-function closeRequestModal(){document.getElementById('requestModal').style.display='none';}
-
-function login(username,password){
-  const user = users.find(u=>u.username===username && u.password===password);
-  if(!user){ alert('Incorrect credentials or not approved.'); return; }
+// LOGIN
+document.getElementById('loginBtn').addEventListener('click',()=>{
+  const u=document.getElementById('loginUser').value.trim();
+  const p=document.getElementById('loginPass').value.trim();
+  const user=users.find(x=>x.username===u && x.password===p);
+  if(!user){alert('Invalid credentials'); return;}
   currentUser=user;
   document.getElementById('loginDiv').style.display='none';
   document.getElementById('sidebar').style.display='block';
   document.getElementById('dashUser').innerText = user.username;
   document.getElementById('userStatus').innerText = 'Approved';
   document.getElementById('userRole').innerText = user.rank;
-  if(user.rank==='Admin'){document.getElementById('pendingBtn').style.display='block'; document.getElementById('adminCreateBtn').style.display='block'; document.getElementById('liveAdminControls').style.display='block';}
-  else{document.getElementById('pendingBtn').style.display='none'; document.getElementById('adminCreateBtn').style.display='none';}
+  if(user.rank==='Admin'){document.getElementById('adminCreateBtn').style.display='block';document.getElementById('liveAdminControls').style.display='block';}
+  else{document.getElementById('adminCreateBtn').style.display='none';document.getElementById('liveAdminControls').style.display='none';}
   showPanel('dashboard');
-}
+});
 
+// LOGOUT
 function logout(){
   currentUser=null;
   document.getElementById('sidebar').style.display='none';
-  document.getElementById('loginDiv').style.display='block';
+  document.getElementById('loginDiv').style.display='flex';
 }
 
-// EVENT LISTENERS
-document.getElementById('loginBtn').addEventListener('click',()=>{
-  login(document.getElementById('loginUser').value.trim(), document.getElementById('loginPass').value.trim());
-});
-document.getElementById('requestBtn').addEventListener('click', openRequestModal);
-document.getElementById('submitRequestBtn').addEventListener('click',()=>{
-  const u = document.getElementById('reqUser').value.trim();
-  const p = document.getElementById('reqPass').value.trim();
-  const d = document.getElementById('reqDiscord').value.trim();
-  if(!u||!p){alert('Enter username and password'); return;}
-  pendingAccounts.push({username:u,password:p,discord:d,rank:'Dispatcher Trainee',status:'Pending'});
-  localStorage.setItem('pendingAccounts', JSON.stringify(pendingAccounts));
-  alert('Request submitted, waiting for approval');
-  closeRequestModal();
-});
+// SHOW PANEL
+function showPanel(id){
+  ['dashboard','live','scenarios','results','adminCreateUser'].forEach(p=>document.getElementById(p).style.display='none');
+  document.getElementById(id).style.display='block';
+}
 
-// Additional JS for scenarios, live calls, results, approvals would follow here...
+// ADMIN CREATE ACCOUNT
+document.getElementById('createAdminBtn').addEventListener('click',()=>{
+  if(!currentUser || currentUser.rank!=='Admin'){alert('Only Admin can create users'); return;}
+  const u=document.getElementById('newUser').value.trim();
+  const p=document.getElementById('newPass').value.trim();
+  const r=document.getElementById('newRole').value;
+  if(!u||!p){alert('Enter username and password'); return;}
+  if(users.find(x=>x.username===u)){alert('User exists'); return;}
+  users.push({username:u,password:p,rank:r});
+  localStorage.setItem('users', JSON.stringify(users));
+  alert('User created successfully');
+  document.getElementById('newUser').value=''; document.getElementById('newPass').value='';
+});
 </script>
 
 </body>
 </html>
 
-</html>
